--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <section class="apresentacao__principal apresentacao__secao">
             <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
             <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua">
+            <a class="apresentacao__secao__botao" href="https://www.alura.com.br">Assine por 12x de R$ 120,00*</a>
         </section>
     </body>
 </html>
