--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     </head>
     <body>
         <section class="apresentacao__principal apresentacao__secao">
-            <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua">
-            <a class="apresentacao__secao__botao" href="https://www.alura.com.br">Assine por 12x de R$ 120,00*</a>
+            <div>
+                <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+                <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua">
+                <a class="apresentacao__secao__botao" 
+                    href="https://www.alura.com.br">
+                    Assine por 12x de R$ 120,00*
+                </a>
+                <a class="apresentacao__secao__botao apresentacao__secao__botao--secundario" 
+                    href="https://www.alura.com.br">
+                    Assinar somente o Alura+
+                </a>
+                <p class="apresentacao__secao__texto">
+                    *O preço pode variar caso a assinatura seja feita em outros planos
+                </p>
+            </div>
         </section>
     </body>
 </html>
