--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alura Plus</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Krona+One&family=Montserrat:ital,wght@0,600;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
         <section class="apresentacao__principal apresentacao__secao">
             <div>
-                <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+                <h1 class="apresentacao__secao__titulo">
+                    Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
+                </h1>
                 <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua">
                 <a class="apresentacao__secao__botao" 
                     href="https://www.alura.com.br">
