--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Krona+One&family=Montserrat:ital,wght@0,600;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
-        <section class="apresentacao__principal apresentacao__secao">
-            <div>
-                <h1 class="apresentacao__secao__titulo">
+        <section class="apresentacao__secao apresentacao__secao--principal">
+            <div class="apresentacao__secao__caixa">
+                <h1 class="apresentacao__secao__caixa__titulo">
                     Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
                 </h1>
-                <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua">
-                <a class="apresentacao__secao__botao" 
+                <img class="apresentacao__secao__caixa__imagem" 
+                    src="./assets/Combo.png" 
+                    alt="O combo+ é a junção do alura+ e o alura lingua">
+                <a class="apresentacao__secao__caixa__botao" 
                     href="https://www.alura.com.br">
                     Assine por 12x de R$ 120,00*
                 </a>
-                <a class="apresentacao__secao__botao apresentacao__secao__botao--secundario" 
+                <a class="apresentacao__secao__caixa__botao apresentacao__secao__caixa__botao--secundario" 
                     href="https://www.alura.com.br">
                     Assinar somente o Alura+
                 </a>
-                <p class="apresentacao__secao__texto">
+                <p class="apresentacao__secao__caixa__texto">
                     *O preço pode variar caso a assinatura seja feita em outros planos
                 </p>
             </div>
