--- a/index.html
+++ b/index.html
@@ -31,5 +31,20 @@
                 </p>
             </div>
         </section>
+        <section class="apresentacao__secao apresentacao__secao--secundaria">
+            <img class="apresentacao__secao__imagem--secundaria" 
+                src="./assets/Plataformas.png" 
+                alt="Um monitor e um celular com o alura plus aberto">
+            <div class="apresentacao__secao__caixa--secundaria">
+                <h2 class="apresentacao__secao__caixa__titulo--secundario">
+                    Assista do seu jeito
+                </h2>
+                <p class="apresentacao__secao__caixa__texto--secundario">
+                    Aproveite a tela grande da TV ou assista no tablet, 
+                    laptop, celular e outros aparelhos. Nossa seleção de 
+                    cursos não para de crescer.
+                </p>
+            </div>
+        </section>
     </body>
 </html>
