--- a/index.html
+++ b/index.html
@@ -46,5 +46,21 @@
                 </p>
             </div>
         </section>
+        <section class="apresentacao__secao apresentacao__secao--secundaria">
+            <div class="apresentacao__secao__caixa--secundaria">
+                <p class="apresentacao__secao__caixa__texto--secundario">
+                    Só o Combo+ oferece Alura+ e Alura Língua juntos para 
+                    você ter acesso a cursos de diversas áreas da tecnologia 
+                    e aprender inglês ou espanhol, onde e como quiser.
+                </p>
+                <a class="apresentacao__secao__caixa__botao apresentacao__secao__caixa__botao--semiprimario" 
+                    href="https://www.alura.com.br">
+                    Assine o Combo+
+                </a>
+            </div>
+            <img class="apresentacao__secao__imagem--secundaria" 
+                src="./assets/Telas.png" 
+                alt="Telas dos sites da alura e alura língua">
+        </section>
     </body>
 </html>
