--- a/index.html
+++ b/index.html
@@ -62,5 +62,20 @@
                 src="./assets/Telas.png" 
                 alt="Telas dos sites da alura e alura língua">
         </section>
+        <section class="apresentacao__secao apresentacao__secao--secundaria">
+            <img class="apresentacao__secao__imagem--secundaria" 
+                src="./assets/Notebook.png" 
+                alt="Un notebook com o site da alura logado">
+            <div class="apresentacao__secao__caixa--secundaria">
+                <h2 class="apresentacao__secao__caixa__titulo--secundario">
+                    Baixe seus cursos
+                </h2>
+                <p class="apresentacao__secao__caixa__texto--secundario">
+                    Baixe e assista quando e onde quiser. 
+                    Assim, seus favoritos estão sempre com você, 
+                    até mesmo sem internet.
+                </p>
+            </div>
+        </section>
     </body>
 </html>
