feat: seção final

--- a/index.html
+++ b/index.html
@@ -77,5 +77,24 @@
                 </p>
             </div>
         </section>
+        <section class="apresentacao__secao--final">
+            <h2 class="apresentacao__secao__caixa__titulo--secundario">
+                Disponível nos seus dispositivos favoritos
+            </h2>
+            <div class="apresentacao__secao__caixa--final">
+                <div>
+                    <img src="./assets/tv.png" alt="TV">
+                    <h3>TV</h3>
+                </div>
+                <div>
+                    <img src="./assets/computador.png" alt="Computadores">
+                    <h3>Computadores</h3>
+                </div>
+                <div>
+                    <img src="./assets/celular.png" alt="Celulares e tablets">
+                    <h3>Celulares e tablets</h3>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
