--- a/index.html
+++ b/index.html
@@ -10,91 +10,129 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Krona+One&family=Montserrat:ital,wght@0,600;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
-        <section class="apresentacao__secao apresentacao__secao--principal">
-            <div class="apresentacao__secao__caixa">
-                <h1 class="apresentacao__secao__caixa__titulo">
-                    Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
-                </h1>
-                <img class="apresentacao__secao__caixa__imagem" 
-                    src="./assets/Combo.png" 
-                    alt="O combo+ é a junção do alura+ e o alura lingua">
-                <a class="apresentacao__secao__caixa__botao" 
-                    href="https://www.alura.com.br">
-                    Assine por 12x de R$ 120,00*
-                </a>
-                <a class="apresentacao__secao__caixa__botao apresentacao__secao__caixa__botao--secundario" 
-                    href="https://www.alura.com.br">
-                    Assinar somente o Alura+
-                </a>
-                <p class="apresentacao__secao__caixa__texto">
-                    *O preço pode variar caso a assinatura seja feita em outros planos
-                </p>
-            </div>
-        </section>
-        <section class="apresentacao__secao apresentacao__secao--secundaria">
-            <img class="apresentacao__secao__imagem--secundaria" 
-                src="./assets/Plataformas.png" 
-                alt="Um monitor e um celular com o alura plus aberto">
-            <div class="apresentacao__secao__caixa--secundaria">
+        <main class="apresentacao">
+            <section class="apresentacao__secao apresentacao__secao--principal">
+                <div class="apresentacao__secao__caixa">
+                    <h1 class="apresentacao__secao__caixa__titulo">
+                        Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.
+                    </h1>
+                    <img class="apresentacao__secao__caixa__imagem" 
+                        src="./assets/Combo.png" 
+                        alt="O combo+ é a junção do alura+ e o alura lingua">
+                    <a class="apresentacao__secao__caixa__botao" 
+                        href="https://www.alura.com.br">
+                        Assine por 12x de R$ 120,00*
+                    </a>
+                    <a class="apresentacao__secao__caixa__botao apresentacao__secao__caixa__botao--secundario" 
+                        href="https://www.alura.com.br">
+                        Assinar somente o Alura+
+                    </a>
+                    <p class="apresentacao__secao__caixa__texto">
+                        *O preço pode variar caso a assinatura seja feita em outros planos
+                    </p>
+                </div>
+            </section>
+            <section class="apresentacao__secao apresentacao__secao--secundaria">
+                <img class="apresentacao__secao__imagem--secundaria" 
+                    src="./assets/Plataformas.png" 
+                    alt="Um monitor e um celular com o alura plus aberto">
+                <div class="apresentacao__secao__caixa--secundaria">
+                    <h2 class="apresentacao__secao__caixa__titulo--secundario">
+                        Assista do seu jeito
+                    </h2>
+                    <p class="apresentacao__secao__caixa__texto--secundario">
+                        Aproveite a tela grande da TV ou assista no tablet, 
+                        laptop, celular e outros aparelhos. Nossa seleção de 
+                        cursos não para de crescer.
+                    </p>
+                </div>
+            </section>
+            <section class="apresentacao__secao apresentacao__secao--secundaria">
+                <div class="apresentacao__secao__caixa--secundaria">
+                    <p class="apresentacao__secao__caixa__texto--secundario">
+                        Só o Combo+ oferece Alura+ e Alura Língua juntos para 
+                        você ter acesso a cursos de diversas áreas da tecnologia 
+                        e aprender inglês ou espanhol, onde e como quiser.
+                    </p>
+                    <a class="apresentacao__secao__caixa__botao apresentacao__secao__caixa__botao--semiprimario" 
+                        href="https://www.alura.com.br">
+                        Assine o Combo+
+                    </a>
+                </div>
+                <img class="apresentacao__secao__imagem--secundaria" 
+                    src="./assets/Telas.png" 
+                    alt="Telas dos sites da alura e alura língua">
+            </section>
+            <section class="apresentacao__secao apresentacao__secao--secundaria">
+                <img class="apresentacao__secao__imagem--secundaria" 
+                    src="./assets/Notebook.png" 
+                    alt="Un notebook com o site da alura logado">
+                <div class="apresentacao__secao__caixa--secundaria">
+                    <h2 class="apresentacao__secao__caixa__titulo--secundario">
+                        Baixe seus cursos
+                    </h2>
+                    <p class="apresentacao__secao__caixa__texto--secundario">
+                        Baixe e assista quando e onde quiser. 
+                        Assim, seus favoritos estão sempre com você, 
+                        até mesmo sem internet.
+                    </p>
+                </div>
+            </section>
+            <section class="apresentacao__secao--final">
                 <h2 class="apresentacao__secao__caixa__titulo--secundario">
-                    Assista do seu jeito
+                    Disponível nos seus dispositivos favoritos
                 </h2>
-                <p class="apresentacao__secao__caixa__texto--secundario">
-                    Aproveite a tela grande da TV ou assista no tablet, 
-                    laptop, celular e outros aparelhos. Nossa seleção de 
-                    cursos não para de crescer.
-                </p>
-            </div>
-        </section>
-        <section class="apresentacao__secao apresentacao__secao--secundaria">
-            <div class="apresentacao__secao__caixa--secundaria">
-                <p class="apresentacao__secao__caixa__texto--secundario">
-                    Só o Combo+ oferece Alura+ e Alura Língua juntos para 
-                    você ter acesso a cursos de diversas áreas da tecnologia 
-                    e aprender inglês ou espanhol, onde e como quiser.
-                </p>
-                <a class="apresentacao__secao__caixa__botao apresentacao__secao__caixa__botao--semiprimario" 
-                    href="https://www.alura.com.br">
-                    Assine o Combo+
-                </a>
-            </div>
-            <img class="apresentacao__secao__imagem--secundaria" 
-                src="./assets/Telas.png" 
-                alt="Telas dos sites da alura e alura língua">
-        </section>
-        <section class="apresentacao__secao apresentacao__secao--secundaria">
-            <img class="apresentacao__secao__imagem--secundaria" 
-                src="./assets/Notebook.png" 
-                alt="Un notebook com o site da alura logado">
-            <div class="apresentacao__secao__caixa--secundaria">
-                <h2 class="apresentacao__secao__caixa__titulo--secundario">
-                    Baixe seus cursos
-                </h2>
-                <p class="apresentacao__secao__caixa__texto--secundario">
-                    Baixe e assista quando e onde quiser. 
-                    Assim, seus favoritos estão sempre com você, 
-                    até mesmo sem internet.
-                </p>
-            </div>
-        </section>
-        <section class="apresentacao__secao--final">
-            <h2 class="apresentacao__secao__caixa__titulo--secundario">
-                Disponível nos seus dispositivos favoritos
-            </h2>
-            <div class="apresentacao__secao__caixa--final">
-                <div>
-                    <img src="./assets/tv.png" alt="TV">
-                    <h3>TV</h3>
-                </div>
-                <div>
-                    <img src="./assets/computador.png" alt="Computadores">
-                    <h3>Computadores</h3>
-                </div>
-                <div>
-                    <img src="./assets/celular.png" alt="Celulares e tablets">
-                    <h3>Celulares e tablets</h3>
-                </div>
-            </div>
-        </section>
+                <ul class="apresentacao__secao__lista__dispositivo">
+                    <li>
+                        <img src="./assets/tv.png" alt="Ícone de TV">
+                        <h3>TV</h3>
+                    </li>
+                    <li>
+                        <img src="./assets/computador.png" alt="Ícone de Computadores">
+                        <h3>Computadores</h3>
+                    </li>
+                    <li>
+                        <img src="./assets/celular.png" alt="Ícone de Celular">
+                        <h3>Celulares e tablets</h3>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer class="rodape">
+            <img src="./assets/Logo.png" alt="Logo da alura plus">
+            <ul class="rodape__lista">
+                <li>
+                    <a href="#">Idioma</a>
+                </li>
+                <li>
+                    <a href="#">Dispositivos compatíveis</a>
+                </li>
+                <li>
+                    <a href="#">Contrato de assinatura</a>
+                </li>
+                <li>
+                    <a href="#">Politica de privacidade</a>
+                </li>
+                <li>
+                    <a href="#">Proteção de dados no Brasil</a>
+                </li>
+                <li>
+                    <a href="#">Anuncios personalizados</a>
+                </li>
+                <li>
+                    <a href="#">Ajuda</a>
+                </li>
+            </ul>
+            <p class="rodape__texto">
+                ® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. 
+                Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+            </p>
+            <p class="rodape__texto">
+                Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. 
+                O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., 
+                Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e 
+                CNPJ 05.555.382/0001-33
+            </p>
+        </footer>
     </body>
 </html>
